<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, TestActivity!</string>
    <string name="hello2">Hello2 World, TestActivity!</string>
    <string name="app_name">AAAA</string>
    <string name="city_change">切换</string>
    <string name="title_bar">标题</string>
    <string name="title_right">右边</string>
    <string name="title_left">左边</string>
    <string name="btnAsync">Async</string>
    <string name="btnAsyncStart">Start</string>
    <string name="btnAsyncEnd">End</string>
    <string name="btnTest">Test</string>
    <string name="btnResult">Result</string>
    <string name="empty"></string>
    <string name="empty_0">0%</string>
    <string name="dialog_cancel">取消</string>
    <string name="dialog_title">设置</string>
    <string name="fragment_menu_left">left</string>
    <string name="fragment_menu_right">right</string>
    <string name="fragment_menu_center">center</string>
    <string name="fragment_menu_first">first</string>
    <string name="fragment_menu_second">second</string>
    <string name="fragment_menu_third">third</string>
    <string name="date_time">DateTime</string>
    <string name="show_badge_view">BadgeView</string>
    <string name="empty_content">Empty</string>
    <string name="empty_header">Header</string>
    <string name="empty_footer">Footer</string>
    <string name="alertdialog">AlertDialog</string>
    <string name="fragment">Fragment</string>
    <string name="back_to_root">Back To Root</string>
    <string name="back_to_pre">Back To Pre</string>
    <string name="myscale_show">Show</string>
    <string name="btnBack">Back</string>
    <string name="btnAlert">Alert</string>
    <string name="btnDefineAlert">DefineAlert</string>
    <string name="btnDialog">Dialog</string>
    <string name="btnProgressBar">ProgressBar</string>
    <string name="account">账户</string>
    <string name="password">密码</string>
    <string name="accountHint">输入账户名称</string>
    <string name="passwordHint">输入密码</string>
    <string name="title_activity_vpmain">VPMainActivity</string>
    <string name="str_search">城市</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">MenuSettings</string>
    <string name="image">image</string>
    <string name="btn_zoom_in">Zoom In</string>
    <string name="btn_zoom_out">Zoom Out</string>
    <string name="btn_zoom">Zoom</string>
    <string name="btn_zoom2">Zoom2</string>
    <string name="btn_zoom3">Zoom3</string>
    <string name="btn_zoom4">Zoom4</string>
    <string name="btn_big">Big</string>
    <string name="btn_small">Small</string>
    <string name="btn_drag">Drag</string>
    <string name="btn_group_list">GroupList</string>
    <string name="btn_grid_view">GridView</string>
    <string name="btn_viewpager">ViewPager</string>
    <string name="btn_image">Image</string>
    <string name="btn_image_view">ImageView</string>
    <string name="report">report</string>
    <string name="btn_wireless">无线设置</string>
    <string name="btn_preference">Preference</string>
    <string name="title_activity_menu">MenuTest</string>
    <string name="title_activity_menu2">Menu2Activity</string>
    <string name="ok_btn">OK</string>
    <string name="cancel_btn">Cancel</string>
    <string name="passwd_tip">请输入密码</string>
    <string name="passwd_btn_test">密码测试</string>
    <string name="passwd_dialog_title">密码</string>
    <string name="textViewSetUrl">服务地址</string>
    <string name="test">Test</string>
    <string name="action_bar">ActionBar</string>
    <string name="menu_icon">MenuIcon</string>
    <string name="sensor">sensor</string>
    <string name="setting_dialog">SetDialog</string>
    <string name="pb_test">进度条</string>
    <string name="textViewSetUser">用户信息</string>
    <string name="btnMenu">Menu</string>
    <string name="btnMenuPop">MenuPop</string>
    <string name="title_activity_float_main">FloatMainActivity</string>
    <string name="btnFloat">BtnFloat</string>
    <string name="btn_notify">Notify</string>
    <string name="btnStartService">Start</string>
    <string name="btnStopService">Stop</string>
    <string name="btnPhotoUpload">拍照上传</string>
    <string name="btnBaiduMap">百度地图</string>
    <string name="btnDate">日期</string>
    <string name="strDate">1970&#8211;1&#8211;1</string>
    <string name="strFemale">女</string>
    <string name="btnCallCamera">拍照</string>
    <string name="btnSelectPic">相册选择</string>
    <string name="btnUploadPhoto">上传</string>
    <string name="title_activity_photo_upload">拍照上传测试</string>
    <string name="common_msg_nosdcard">没有SDCard</string>
    <string name="common_msg_get_photo_failure">获取图像失败</string>
    <string name="btn_asynctask">异步任务</string>
    <string name="title_activity_baidu_map_test">BaiduMapTestActivity</string>
    <string name="alertdialog_test">进度条</string>
    <string name="dialog_loading">Loading &#8230; </string>
    <string name="btnListViewTest">ListViewTest</string>
    <string name="pull_to_refresh_pull_label_2">下拉刷新</string>
    <string name="pull_to_refresh_release_label_2">放开以刷新</string>
    <string name="pull_to_refresh_refreshing_label_2">载入中</string>
    <string name="pull_to_refresh_tap_label">点击这里刷新</string>
    <string name="pull_to_load">上拉加载</string>
    <string name="loading">载入中</string>
    <string name="release_to_load">放开以加载</string>
    <string name="title_activity_date">DateActivity</string>
    <string name="gender">性别</string>
    <string name="gender_male">男</string>
    <string name="gender_female">女</string>
    <string name="gender_done">完成</string>
    <string name="title_activity_circle_image_view">CircleImageViewActivity</string>
    <string name="title_activity_get_code">GetCodeActivity</string>
    <string name="title_activity_view_pager">ViewPagerActivity</string>
    <string name="title_activity_grid_layout_test">GridLayoutTestActivity</string>
    <string name="sharesdk">ShareSDK</string>
    <string name="title_activity_action_bar">ActionBarActivity</string>
    <string name="title_activity_menu_icon">MenuIconActivity</string>
    <string name="title_activity_sensor">SensorActivity</string>

</resources>