<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <Button
            android:id="@+id/btnSetting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_wireless" />
        
        <Button
            android:id="@+id/btnPreference"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_preference" />
        
        <Button
            android:id="@+id/btnAsyncTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_asynctask" />

       
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/getcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Button" />
        
        <Button
            android:id="@+id/btnAlertDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alertdialog" />
        
        <Button
            android:id="@+id/fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment" />

        <LinearLayout
            android:id="@+id/showBadgeLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/showBadgeTest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:background="@color/white"
                android:gravity="center"
                android:text="@string/show_badge_view" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/buttonBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnBack" />

        <Button
            android:id="@+id/btnAlert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnAlert" />

        <Button
            android:id="@+id/btnMyDefineDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnDefineAlert" />

        <Button
            android:id="@+id/shareSdk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sharesdk" />

        

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/buttonDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnDialog" />
        
         <Button
            android:id="@+id/btnProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnProgressBar" />

         <Button
             android:id="@+id/dateTime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/date_time" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnZoom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_zoom" />

        <Button
            android:id="@+id/btnZoom2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_zoom2" />
        
        <Button
            android:id="@+id/btnZoom3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_zoom3" />

        <Button
            android:id="@+id/btnZoom4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_zoom4" />

        

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnDrag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_drag" />
        
        <Button
            android:id="@+id/btnGroupList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_group_list" />
        
        <Button
            android:id="@+id/btnGridView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_grid_view" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnViewPager"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_viewpager" />
        
        <Button
            android:id="@+id/btnViewPager2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_viewpager" />

        <Button
            android:id="@+id/btnImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_image" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_image_view" />

        <Button
            android:id="@+id/btnCircleImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_image_view" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnMenu" />

        <Button
            android:id="@+id/btnMenuPop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnMenuPop" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnFloat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnFloat" />

        <Button
            android:id="@+id/btnNotify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_notify" />

        <Button
            android:id="@+id/btnStartService"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnStartService" />

        <Button
            android:id="@+id/btnStopService"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnStopService" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnPhotoUpload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnPhotoUpload" />
        
        <Button
            android:id="@+id/btnPhotoUpload2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnPhotoUpload" />

        <Button
            android:id="@+id/btnBaiduMap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnBaiduMap" />

        <Button
            android:id="@+id/btnDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnDate" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnListViewTest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnListViewTest" />

        <Button
            android:id="@+id/btnListViewTest2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnListViewTest" />

        <Button
            android:id="@+id/btnListViewTest3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnListViewTest" />
    </LinearLayout>

</LinearLayout>