<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <!-- 
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="71dp"
        android:layout_marginTop="74dp"
        android:text="@string/fragment_menu_first" />
	 -->

    <Button
        android:id="@+id/test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/test" />
    
    <Button
        android:id="@+id/action_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_bar" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/menu_icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_icon" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/sensor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sensor" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/setting_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setting_dialog" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/pbButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        	android:layout_weight="1"
        	style="?android:attr/buttonBarButtonStyle"
            android:text="@string/pb_test" />
        
        <Button
            android:id="@+id/pbDialogButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        	android:layout_weight="1"
        	style="?android:attr/buttonBarButtonStyle"
            android:text="@string/pb_test" />
    </LinearLayout>

</LinearLayout>
