<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_x="8dp"
        android:layout_y="8dp"
        android:contentDescription="@string/image"
        android:src="@drawable/folder" />

    <Button
        android:id="@+id/btnZoomIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="26dp"
        android:layout_y="404dp"
        android:text="@string/btn_zoom_in" />

    <Button
        android:id="@+id/btnZoomOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="139dp"
        android:layout_y="404dp"
        android:text="@string/btn_zoom_out"
        android:textSize="20sp" />

</AbsoluteLayout>
