<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/gender_layout"
    android:orientation="vertical" >

    <RadioGroup
        android:id="@+id/gender_select"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center"
        android:orientation="horizontal" >
        
        <RadioButton
            android:id="@+id/gender_female"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender_female" />

        <RadioButton
            android:id="@+id/gender_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender_male" />
    </RadioGroup>

    <Button
        android:id="@+id/gender_done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gender_done" />

</LinearLayout>