<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black"
    android:orientation="horizontal" >
    
    <TextView
        android:id="@+id/titleLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:text="@string/title_left" />
    
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center" 
        android:textSize="20sp"
        android:text="@string/title_bar"
        android:textColor="@color/white" />
    
    <TextView
        android:id="@+id/titleRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="20dp"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:text="@string/title_right" />

</RelativeLayout>
