<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="org.sevenzero.PhotoUploadActivity"
    tools:ignore="MergeRootFrame" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnCallCamera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnCallCamera" />
        
        <Button
            android:id="@+id/btnSelectPic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnSelectPic" />

        <Button
            android:id="@+id/btnUploadPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnUploadPhoto" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/uploadPhotoProgressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_gravity="center"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/cat" />

</LinearLayout>