<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello" />
    
    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#FFEEEE" />

    <ProgressBar
        android:id="@+id/asyncTaskProgressBar"
        android:layout_gravity="center"
        android:visibility="visible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnAsync"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnAsync" />

        <Button
            android:id="@+id/btnAsyncStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnAsyncStart" />
        
        <Button
            android:id="@+id/btnAsyncEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnAsyncEnd" />
        
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#FFEEEE" />
    
	<ProgressBar
        android:id="@+id/asyncTaskProgressBarh"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_gravity="center"
        android:max="120"
        android:progress="20"
        android:background="#FFFFFF"
        android:layout_width="200dp"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnAsynch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnAsync" />

        <Button
            android:id="@+id/btnAsyncStarth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnAsyncStart" />
        
        <Button
            android:id="@+id/btnAsyncEndh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnAsyncEnd" />
        
    </LinearLayout>

    

</LinearLayout>