<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/date_time"
    android:layout_width="280dp"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:ignore="MergeRootFrame" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/dialog_empty"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:background="@color/dialog_blue"
            android:text="@string/empty" />

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:rotation="-45"
            android:textColor="@color/white"
            android:text="@string/dialog_title" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/empty"
            android:paddingBottom="30dp"
            android:paddingTop="30dp"
            android:src="@drawable/settings" />

    </FrameLayout>

    <GridView
        android:id="@+id/dialog_gridView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:numColumns="1" >
    </GridView>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/dialog_cancel"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textColor="@color/white"
            android:background="@drawable/shape_set_dialog"
            android:text="@string/dialog_cancel" />

    </LinearLayout>

</LinearLayout>