<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true" >
        
        <View 
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_alignParentTop="true"
            android:background="@color/bg_black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:orientation="horizontal"
             >

            <TextView
                android:id="@+id/menuLeft"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/fragment_menu_first" />

            <TextView
                android:id="@+id/menuCenter"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/fragment_menu_second" />

            <TextView
                android:id="@+id/menuRight"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/fragment_menu_third" />

        </LinearLayout>

    </RelativeLayout>

    <FrameLayout
        android:id="@+id/app_fragment_id"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" >
    </FrameLayout>

</RelativeLayout>
